kubernetes/apps/storage/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: storage
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    cert-manager.home.arpa/enabled: "true"
    hajimari.io/enable: 'true'
    hajimari.io/icon: "carbon:message-queue"
    hajimari.io/group: "Storage"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "emqx.${SECRET_DOMAIN}"
      secretName: emqx-production-tls
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
